Created one bibliography for each team member

--- a/doc/project/machbarkeit/document.tex
+++ b/doc/project/machbarkeit/document.tex
@@ -80,6 +80,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 \include{chapters/ch1_intro}
+\include{chapters/chX_melichar}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
@@ -92,7 +93,7 @@
 %\phantomsection
 %\bibliographystyle{plainnat}
 %\addcontentsline{toc}{chapter}{Bibliography}
-%\bibliography{bibliography.bib}
+%\bibliography{simsek, melichar, bozkurt, perny, faiku}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Document end														%
