--- a/doc/project/machbarkeit/simsek.bib
+++ b/doc/project/machbarkeit/simsek.bib
@@ -16,3 +16,12 @@
   note    = {An optional note}, 
   volume  = 4
 }
+
+@techreport{EPA-TransmissionShiftScheduleAlgorithm,
+  author = {"Kevin Newman","John Kargul","Daniel Barba"},
+  title = "Development and Testing of an Automatic Transmission Shift Schedule Algorithm for Vehicle Simulation",
+  institution = "SAE International / US EPA",
+  year = 2015,
+  month = apr,
+  type = "Research Paper"
+}
