started to adapt the document 'lastenheft' to latex

--- a/doc/project/lastenheft/document.tex
+++ b/doc/project/lastenheft/document.tex
@@ -80,6 +80,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 \include{chapters/ch1_intro}
+\include{chapters/ch2_einsatz}
+\include{chapters/ch3_funktionen}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
