--- a/doc/project/machbarkeit/document.tex
+++ b/doc/project/machbarkeit/document.tex
@@ -80,7 +80,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 \include{chapters/ch1_intro}
-\include{chapters/chX_melichar}
+\include{chapters/ch2_voruntersuchung}
+\include{chapters/ch3_produktfunktionen}
+\include{chapters/ch4_projektdaten}
+\include{chapters/ch5_technische_machbarkeit}
+\include{chapters/ch6_wirtscahftliche_machbarkeit}
+\include{chapters/ch7_projektmanagement}
+\include{chapters/ch8_summary}
+%\include{chapters/chX_melichar}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
