--- a/_posts/2015-10-10-project-2.markdown
+++ b/_posts/2015-10-10-project-2.markdown
@@ -1,14 +1,15 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Jekyll
+subtitle: A simple, blog-aware, static site generator for personal, project, or organization sites
 layout: default
 modal-id: 1
-date: 2014-07-18
-img: dreams.png
-thumbnail: dreams-thumbnail.png
+date: 2014-10-10
+img: placeholder.png
+thumbnail: placeholder.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
+project-date: Oktober 2015
+client: Jekyll
+link: http://jekyllrb.com
 category: Web Development
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
