Restructure of Machbarkeit

--- a/doc/project/machbarkeit/document.tex
+++ b/doc/project/machbarkeit/document.tex
@@ -87,8 +87,8 @@
 \include{chapters/ch6_wirtschaftlichemachbarkeit}
 \include{chapters/ch7_projektmanagement}
 \include{chapters/ch8_summary}
-%\include{chapters/chX_melichar}
-%\include{chapters/chX_simsek}
+\include{chapters/chX_melichar}
+\include{chapters/chX_simsek}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
