Worked on Machbarkeit

--- a/doc/project/machbarkeit/document.tex
+++ b/doc/project/machbarkeit/document.tex
@@ -35,6 +35,7 @@
 \usepackage{amsmath}
 \usepackage{cite}
 \usepackage{enumitem}
+\usepackage{rotating}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Optional packages													%
@@ -87,8 +88,6 @@
 \include{chapters/ch6_wirtschaftliche_machbarkeit}
 \include{chapters/ch7_projektmanagement}
 \include{chapters/ch8_summary}
-\include{chapters/chX_melichar}
-\include{chapters/chX_simsek}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
