--- a/_posts/2015-10-10-project-1.markdown
+++ b/_posts/2015-10-10-project-1.markdown
@@ -1,6 +1,6 @@
 ---
-title: Jekyll
-subtitle: A simple, blog-aware, static site generator for personal, project, or organization sites
+title: Projektwoche
+subtitle: Eine Kurzer Einlick über unsere Projektwoche
 layout: default
 modal-id: 1
 date: 2014-10-10
@@ -8,9 +8,11 @@ img: placeholder.png
 thumbnail: placeholder.png
 alt: image-alt
 project-date: Oktober 2015
-client: Jekyll
+client: Projektwoche
 link: http://jekyllrb.com
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Während unserer Projektwoche mussten sehr viele Dokumente, wie Lastenheft, Projektantrag und ein ansatz unserer Machbarkeitsstudue erstellt werden. 
+Die Herausforderung nahmen wir gerne an und machten uns ans Werk. 
+Während der einen Woche wurde uns ebenfalls der Umgang mit unserem Projektmitgliedern beigebracht.
 
 ---
