Restructured and redid the retrospektive

--- a/doc/project/retrospektiven/document.tex
+++ b/doc/project/retrospektiven/document.tex
@@ -80,8 +80,7 @@
 %	Main contents														%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
-\include{Retrosperktive1.tex}
-
+\include{chapters/ch1_211015}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
