--- a/doc/project/retrospektiven/settings/required.tex
+++ b/doc/project/retrospektiven/settings/required.tex
@@ -22,10 +22,10 @@
 			
 			
 			\vspace{3cm}
-			%\includegraphics[width=.2\textwidth]{images/TGM_Logo.pdf} Wenn ich mal was includen will
+			\includegraphics[width=.2\textwidth]{images/TGM_Logo.pdf}
 			
 			\vspace{1cm}
-			\textbf{Retrosperktive}
+			\textbf{Retrospektiven}
 			\vspace{0.5cm}				
 			\Large
 			\\
