Added diplomarbeit template

--- a/abnahmen/document.tex
+++ b/abnahmen/document.tex
@@ -83,6 +83,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 \include{chapters/ch1_sprint01}
+\include{chapters/ch2_sprint02}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
