--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -11,8 +11,7 @@
 \gdef\mybegin{\today}
 \gdef\myfinish{\today}
 
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SETTINGS
 \input{special/preamble.tex}
 
@@ -58,14 +57,13 @@ Text \cite{solarfarm} Text.
 
 % BIBL
 \clearpage
-\nocite{*}
+%\nocite{*}
 \printbibliography
 
 % APPENDENCIES
 \clearpage
 \begin{appendices}
-	\chapter{Glossar}
-		\printglossary[style=tree]
+	\chapter{Test}
 \end{appendices}
 
 \end{document}
