--- a/diplomarbeit/special/title.tex
+++ b/diplomarbeit/special/title.tex
@@ -40,7 +40,7 @@
 		\begin{tabularx}{\textwidth}{lXr @{\hspace{0mm}}}
 			&& Technologisches Gewerbemuseum\\
 			&& Abteilung der Informationstechnologie\\
-			&& Wien, 2015/16\\[10mm]
+			&& Wien - 2015/16\\[10mm]
 		\end{tabularx}
 	\end{table}}
 
