--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -1,5 +1,6 @@
-@misc{WinNT,
-  title = {{MS Windows NT} Kernel Description},
-  howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-  note = {Accessed: 2010-09-30}
+@online{solarfarm,
+	author={Peter Meier},
+  	title = {{MS Windows NT} Kernel Description},
+  	howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+  	note = {Accessed: 2010-09-30}
 }
