--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -1,6 +1,7 @@
-@online{solarfarm,
-	author={Peter Meier},
-  	title = {{MS Windows NT} Kernel Description},
-  	howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-  	note = {Accessed: 2010-09-30}
+@misc{OMG.2014,
+	author = {OMG},
+	year = {2014},
+	title = {{About the Object Management Group}},
+	howpublished = "\url{http://www.omg.org/gettingstarted/gettingstartedindex.htm}",
+	note = {Accessed on 05.10.2014}
 }
