--- a/executive-summary/document.tex
+++ b/executive-summary/document.tex
@@ -81,6 +81,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 \include{chapters/ch1_intro}
+\include{chapters/ch2_indepth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
