Added extensive introduction

--- a/executive-summary/document.tex
+++ b/executive-summary/document.tex
@@ -80,8 +80,9 @@
 %	Main contents														%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
-\include{chapters/ch1_intro}
-\include{chapters/ch2_indepth}
+\include{chapters/ch1_summary}
+\include{chapters/ch2_intro}
+\include{chapters/ch3_techBasics}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
