added technologic background and economic perspectives

--- a/executive-summary/document.tex
+++ b/executive-summary/document.tex
@@ -83,6 +83,7 @@
 \include{chapters/ch1_summary}
 \include{chapters/ch2_intro}
 \include{chapters/ch3_techBasics}
+\include{chapters/ch4_economicUse}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
