first draft of pre-project status errors and contents changes will be happening shortly

--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -5,3 +5,25 @@
 	howpublished = "\url{http://www.omg.org/gettingstarted/gettingstartedindex.htm}",
 	note = {Accessed on 05.10.2014}
 }
+
+@conference{Carnot.Wirkungsgrad,
+	author = {Prof. Dr. Karl-Heiz Kampert},
+	booktitle = {Kreisprozesse},
+	organisation = {Universität Wuppertal},
+	title = {Kreisprozesse},
+	year = {2013}
+}
+@misc{LowBudget.CarPC,
+	title = {Low Budget CarPC},
+	howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
+	year = {2014},
+	note = {Accessed on 20.03.2016}
+}
+
+	
+@techreport{Businessplan.Runtastic,
+	title={Businessplan Runtastic},
+	institution={Runtastic GmbH},
+	year={2009},
+	author={Florian Gschwandtner, MSc}
+}
