--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -1,10 +1,10 @@
 \section{Introduction}
 \label{sec:intro}
-\lfoot{Autor: Daniel Melichar}
-
+\lfoot{Daniel Melichar}
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. 
 
-\input{sections/ch1_introduction/fahrstyle-analyse.tex}
+\input{sections/ch1_introduction/fahrstil-analyse.tex}
+\input{sections/ch1_introduction/co2-umwelt.tex}
 \input{sections/ch1_introduction/bestshift.tex}
 \input{sections/ch1_introduction/projekt-management.tex}
