--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \label{sec:intro}
-\lfoot{Daniel Melichar}
+\lfoot{Autor: Daniel Melichar}
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. 
 
