added technical basics to thesis

--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -48,7 +48,7 @@
 \pagenumbering{arabic}
 \pagestyle{fancy}
 \input{sections/ch1_introduction/main.tex}
-
+\input{sections/ch2_technisches_design/main}
 
 % BIBL
 \clearpage
