Added OBD-II section Not final, changes to the text will be made shortly Sources, images and main.tex were only modified/added because of the chapter mentioned

--- a/diplomarbeit/sections/ch2_technisches_design/main.tex
+++ b/diplomarbeit/sections/ch2_technisches_design/main.tex
@@ -1,5 +1,5 @@
-\section{Introduction}
+\section{Technische Grundlagen}
 \label{sec:intro}
-\lfoot{Autor: Daniel Melichar}
+\lfoot{Autor: Raphael Simsek}
 
-OBD-II Standard
+\input{sections/ch2_technisches_design/can-bus}
