--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -7,23 +7,64 @@
 }
 
 @conference{Carnot.Wirkungsgrad,
-	author = {Prof. Dr. Karl-Heiz Kampert},
-	booktitle = {Kreisprozesse},
-	organisation = {Universität Wuppertal},
-	title = {Kreisprozesse},
-	year = {2013}
-}
-@misc{LowBudget.CarPC,
-	title = {Low Budget CarPC},
-	howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
-	year = {2014},
-	note = {Accessed on 20.03.2016}
+        author = {Prof. Dr. Karl-Heiz Kampert},
+        booktitle = {Kreisprozesse},
+        organisation = {Universität Wuppertal},
+        title = {Kreisprozesse},
+        year = {2013}
 }
 
-	
+@misc{LowBudget.CarPC,
+        title = {Low Budget CarPC},
+        howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/
+		}",
+        year = {2014},
+        note = {Accessed on 20.03.2016}
+}
+        
 @techreport{Businessplan.Runtastic,
-	title={Businessplan Runtastic},
-	institution={Runtastic GmbH},
-	year={2009},
-	author={Florian Gschwandtner, MSc}
+        title={Businessplan Runtastic},
+        institution={Runtastic GmbH},
+        year={2009},
+        author={Florian Gschwandtner, MSc}
+}
+
+@misc{SAE.J1962,
+		title={SAE J1962},
+		year={1992-2015},
+		publisher={SAE International},
+		howpublished="\url{http://standards.sae.org/j1962_201207/}",
+		note={Accessed on 20.03.2016}
+}
+
+@misc{AU.Motor.Vehicle.Standards.Act.1989,
+		title={Vehicle Standard (Australian Design Rule 79/01 — Emission Control for Light Vehicles) 2005},
+		year={2005},
+		publisher={Australian Government},
+		howpublished="\url{https://www.legislation.gov.au/Details/F2008C00323}",
+		note={Accessed on 20.03.2016}
+}
+
+@misc{Directive.98/69/EC.EUParliament,
+		title={Directive 98/69/EC of the European Parliament and of the Council of 13 October 1998 relating to measures to be taken against air pollution by emissions from motor vehicles and amending Council Directive 70/220/EEC},
+		year={2000},
+		publisher={European Parliament},
+		howpublished="\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:31998L0069:EN:HTML}",
+		note={Accessed on 20.03.2016}
+}
+
+@misc{OBDII.TypeA,
+    author = {{SAE International}},
+    title = {OBD II Typ A Masszeichnung},
+    year = {1992},
+    note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}",
+}
+
+@misc{OBDII.TypeB,
+    author = {{SAE International}},
+    title = {OBD II Typ B Masszeichnung},
+    year = {1992},
+    note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://www.obdtester.com/images/j1962f_type_b.gif}",
 }
