added more subchapters to drivingstyle analysis

--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -1,15 +1,13 @@
 \subsection{Analyse und Verbesserung des Fahrstils}
-Leider kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen kann, da dies oft auch ein andauernder Prozess ist. Zu diesem Zweck wurde sich darüber Gedanken gemacht wie man diese Situation verbessern kann.
-\newline
-\newline
+Leider kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen, da dies oft auch ein andauernder Prozess ist. Zu diesem Zweck wurde sich darüber Gedanken gemacht wie man diese Situation verbessern kann.
+\subsubsection{Ist-Zustand}
 Vor der Antragstellung wurde überlegt, ob es bereits bekannte Systeme, um nachhaltig seinen Fahrstil zu verbessern, gibt. Es wurde dabei herausgefunden dass es bereits in vielen anderen Bereichen Apps gibt, welche sich das \textit{Sharing}-Prinzip zu nutze gemacht haben und so äußerst bekannt geworden sind. Eine der bekanntesten österreichischen Beispiele ist das, stetig erweiterte, App-System von Runtastic. \cite{Businessplan.Runtastic}
 Nur im Bezug auf das Autofahren konnte in diese Richtung nichts lokalisiert werden.
 \newline
 Zu Beginn des Diplomprojektes gab es also keine Möglichkeiten für verbesserungswillige Autofahrer ihren Fahrstil zu verbessern und dies dann sogar zu teilen. 
 Dies hat unsere Marktumfeldanalyse ergeben, wobei uns besonders auffiel, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils nötig wäre. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten.
-\newline
-\newline
-Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei niedrigpreis Fahrzeugen, oft äußerst primitiv gehalten, wobei schlicht ab einer gewissen Drehzahl die darauf folgende Gänge vorgeschlagen werden. Der Wirkungsgrad nach Carnot-Prozess, wird dabei aber kaum verwendet. \cite{Carnot.Wirkungsgrad}
+\subsubsection{Was ließe sich verbessern?}
+Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei niedrigpreis Fahrzeugen, oft äußerst primitiv gehalten, wobei ab einer gewissen Drehzahl die darauf folgende Gänge vorgeschlagen werden oder nur auf den Normzyklus optimiert wird. \cite{Schaltempfehlung} Der Wirkungsgrad nach dem Carnot-Prozess, wird dabei aber kaum verwendet. \cite{Carnot.Wirkungsgrad}
 \newline
 \newline
 Eine Analyse des Fahrstils, nach Parametern der Fahrgastbequemlichkeit, ist gar nur bei Sportwagen und Fahrzeugen, die für den Rennbetrieb gedacht sind, verbaut. Hierbei ist anzumerken, dass bei derartigen Fahrzeugen die Funktionalität nicht für das frühzeitige Verbessern des Fahrstils eines Fahrers verwendet wird, sondern für die Optimierung von Rundenzeiten auf einer Rennstrecke oder schier für das Ausreizen des Möglichen.
@@ -23,3 +21,5 @@ Bei der Evaluierung wurde ein hardware-seitig sehr ähnliches Projekt entdeckt, 
 \newline
 Zusätzlich dazu wäre dieser Car-PC alleine im Bezug auf seine Hardware weitaus teurer als durch dieses Projekt angedacht. Es war aber durchaus möglich in der Definitionsphase des Projektes einige Anpassungen zu treffen, da schon schlussgefolgert werden konnte was im Bereich des möglichen liegt. 
 \newline
+\newline
+Die Möglichkeit einer Analyse konnte aber bei der Evaluierung bei keinem der konkurrierenden Echtzeit-Anzeigen (wie. z.B. Torque Pro \cite{Torque.Pro}) erkannt werden. Gerade diese Funktionalität würde aber von Fahranfängern benötigt werden um frühzeitig und selbstständig Fehler in ihrem Fahrstil erkennen und ausbessern zu können. Somit könnten diese sich diese schlechten Angewohnheiten nicht im motorischen Gedächtnis verankern, sondern es würden sich nur positive Eigenschaften gemerkt werden. Dies ist insbesondere für die Lernkurve bei einem noch ungeübten Kraftfahrzeug-Lenker von großem Vorteil, da diese oft auch noch nach dem Erhalt des Führerscheins unsicher bezüglich ihres Fahrstils sind und viele kleinere Fehler begehen. Insbesondere konnten wir, unter anderem anhand unserer eigener Erfahrung, feststellen, dass das gleichmäßige Fahren, das verbrauchsarme Fahren und das Schalten für viele Fahranfänger eine Herausforderung darstellt.
