--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -1,8 +1,7 @@
-\section{Introduction}
+\section{Einführung}
 \label{sec:intro}
 \lfoot{Autor: Daniel Melichar}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. 
+In diesem Kapitel wird Ihnen ein Überblick über die Evaluierungen des Projektes und den Ist-Zustand vor dem Projekt, geboten.
 
 \input{sections/ch1_introduction/fahrstil-analyse.tex}
 \input{sections/ch1_introduction/co2-umwelt.tex}
