--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -58,7 +58,7 @@
     title = {OBD II Typ A Masszeichnung},
     year = {1992},
     note = {[Online; accessed 22.03.2016]},
-    howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}",
+    howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}"
 }
 
 @misc{OBDII.TypeB,
@@ -66,5 +66,45 @@
     title = {OBD II Typ B Masszeichnung},
     year = {1992},
     note = {[Online; accessed 22.03.2016]},
-    howpublished="\url{http://www.obdtester.com/images/j1962f_type_b.gif}",
+    howpublished="\url{http://www.obdtester.com/images/j1962f_type_b.gif}"
+}
+
+@misc{Schaltempfehlung,
+    author = {{Auto Zeitung}},
+    title = {Sprit Sparen, Schaltempfehlung 10. Paragraph},
+    year = {2015},
+    note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://www.autozeitung.de/tipps-tricks/sprit-sparen-autofahren}"
+}
+
+@misc{Torque.Pro,
+    author = {{Ian Hawkins}},
+    title = {Torque Pro (OBD2 / Auto)},
+    year = {2016},
+    note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://torque-bhp.com}"
+}
+
+@misc{Golf.OBD,
+	author = {{National Center for Automotive Science & Technology at Weber State University}},
+	title = {Golf VI OBD Position},
+	year = {unknown},
+	note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://www.obdclearinghouse.com/OBD-CH/documents/newdocuments/volkswagen/golf/2002.jpg}"
+}
+
+@misc{Polo.OBD,
+	author = {{Copyright: Arturo R Montesinos, Flickr User}},
+	title = {Polo IV 9N3 OBD Position},
+	year = {2011},
+	note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{https://www.flickr.com/photos/armk/5578899043}"
+}
+
+@misc{3er.OBD,
+	author = {{Copyright: Matt Shannahan (tahoerdr), Photobucket User}},
+	title = {BMW 3er E90 OBD Position},
+	year = {unknown},
+	note = {[Online; accessed 22.03.2016]},
+    howpublished="\url{http://i8.photobucket.com/albums/a47/tahoerdr/E90Post/MattShannahanIDDocs006.jpg}"
 }
